--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
     <!-- Career Goals Section -->
     <section>
         <h2>Career/Educational Goals (3-5 years)</h2>
-        <p>I am a hardworking individual who is always looking for opportunities to learn and grow. In the next few years, I aim to further develop my skills in cybersecurity, tackle complex challenges, and continue expanding my knowledge to make a significant impact in the field.</p>
+        <p>
+            I am a hardworking individual who is always looking for opportunities to learn and grow. 
+            In the next few years, I aim to further develop my skills in cybersecurity, tackle complex challenges, 
+            and continue expanding my knowledge to make a significant impact in the field. My goal after graduation
+            is to work at the information technology center for the city of Augusta. Once I'm able to get my foot in the door,
+            I want to branch out and work for a military base which is a big Cyber center for the city of Augusta. Once that is done,
+            I want to branch out and learn the most I can about the field I'm working in. I plan to get plenty of certifications as 
+            well as more career development in the next five years.
+            
+
+        </p>
     </section>
 
 </body>
